--- a/styles/intro.css
+++ b/styles/intro.css
@@ -14,6 +14,7 @@
     align-items: center;
     justify-content: center;
     margin-bottom: -20px;
+    position: relative;
 }
 #home .inner .group h3 {
     font-size:2.2rem;
@@ -130,11 +131,12 @@
 }
 #home .scroll-down{
     position: absolute;
-    top: 83%;
-    left: 50%;
+    top: 77%;
+    left: 43%;
+    transform: translate(50%, 50%);
 }
 #home .scroll-down a img{
-    position: absolute;
+    position: relative;
     width: 85px;
     animation: bounce 1.5s infinite 1.5s;
 }
@@ -158,7 +160,7 @@
     background-color: #fff;
     border-radius: 2rem;
     box-shadow: 0px 5px 10px rgba(66, 92, 224, 0.4);
-    position: absolute;
+    position: relative;
     left: 51%;
     transform: translateX(-51%);
 }
