--- a/styles/intro.css
+++ b/styles/intro.css
@@ -131,9 +131,8 @@
 }
 #home .scroll-down{
     position: absolute;
-    top: 77%;
-    left: 43%;
-    transform: translate(50%, 50%);
+    margin-top: 55%;
+    margin-left: 6%;
 }
 #home .scroll-down a img{
     position: relative;
@@ -161,8 +160,6 @@
     border-radius: 2rem;
     box-shadow: 0px 5px 10px rgba(66, 92, 224, 0.4);
     position: relative;
-    left: 51%;
-    transform: translateX(-51%);
 }
 #about .about_ct{
     display: flex;
